<resources>

    <string name="app_name">Demo Domo Pay</string>

    <string name="action_valid">Order</string>

    <string name="euro" translatable="false">€</string>
    <string name="quantity">Quantity</string>

    <string name="domo_amount_burger" translatable="false">7.5</string>
    <string name="domo_amount_coke" translatable="false">2.5</string>
    <string name="domo_amount_fries" translatable="false">2</string>
    <string name="domo_quantity_burger" translatable="false">1</string>
    <string name="domo_quantity_coke" translatable="false">1</string>
    <string name="domo_quantity_fries" translatable="false">1</string>

    <string name="domo_address">Address: %1$s</string>
    <string name="domo_address_unknown">Address: -</string>
    <string name="domo_price">%1$s €</string>
    <string name="domo_product_burger">Burger</string>
    <string name="domo_product_coke">Cokes</string>
    <string name="domo_product_fries">Fries</string>

    <string name="domo_total">Total : %1$s €</string>

</resources>
