<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".DemoActivity">

    <!-- Action bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/domo_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/domoBlue"
            android:theme="@style/AppTheme.ActionBarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Prevent for having focus on edittext by default (prevent open IME) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <requestFocus />
        </View>

        <!-- Burgers -->
        <LinearLayout
            android:id="@+id/domo_layout_burger"
            style="@style/Domo.ItemLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/Domo.ItemPicture"
                android:contentDescription="@string/domo_product_burger"
                android:src="@drawable/pic_burger" />

            <TextView
                style="@style/Domo.Text.Product"
                android:text="@string/domo_product_burger" />

            <EditText
                android:id="@+id/domo_burger_text_quantity"
                style="@style/Domo.EditText.Quantity"
                android:text="@string/domo_quantity_burger" />

            <EditText
                android:id="@+id/domo_burger_text_price"
                style="@style/Domo.EditText.Price"
                android:text="@string/domo_amount_burger" />

            <TextView
                android:id="@+id/domo_burger_text_total"
                style="@style/Domo.Text.Total" />

        </LinearLayout>

        <!-- Frites -->
        <LinearLayout
            android:id="@+id/domo_layout_fries"
            style="@style/Domo.ItemLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/domo_layout_burger">

            <ImageView
                style="@style/Domo.ItemPicture"
                android:contentDescription="@string/domo_product_fries"
                android:src="@drawable/pic_fries" />

            <TextView
                style="@style/Domo.Text.Product"
                android:text="@string/domo_product_fries" />

            <EditText
                android:id="@+id/domo_fries_text_quantity"
                style="@style/Domo.EditText.Quantity"
                android:text="@string/domo_quantity_fries" />

            <EditText
                android:id="@+id/domo_fries_text_price"
                style="@style/Domo.EditText.Price"
                android:text="@string/domo_amount_fries" />

            <TextView
                android:id="@+id/domo_fries_text_total"
                style="@style/Domo.Text.Total" />

        </LinearLayout>

        <!-- Cocas -->
        <LinearLayout
            android:id="@+id/domo_layout_coke"
            style="@style/Domo.ItemLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/domo_layout_fries">

            <ImageView
                style="@style/Domo.ItemPicture"
                android:contentDescription="@string/domo_product_coke"
                android:src="@drawable/pic_coke" />

            <TextView
                style="@style/Domo.Text.Product"
                android:text="@string/domo_product_coke" />

            <EditText
                android:id="@+id/domo_coke_text_quantity"
                style="@style/Domo.EditText.Quantity"
                android:text="@string/domo_quantity_coke" />

            <EditText
                android:id="@+id/domo_coke_text_price"
                style="@style/Domo.EditText.Price"
                android:text="@string/domo_amount_coke" />

            <TextView
                android:id="@+id/domo_coke_text_total"
                style="@style/Domo.Text.Total" />

        </LinearLayout>


        <TextView
            android:id="@+id/domo_text_total"
            style="@style/Domo.Text"
            android:text="@string/domo_total"
            android:textSize="@dimen/domo_text_big_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/domo_layout_coke" />

        <Button
            android:id="@+id/domo_button_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/domo_basic_margin"
            android:text="@string/action_valid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/domo_text_total" />

        <TextView
            android:id="@+id/domo_text_address"
            style="@style/Domo.Text"
            android:text="@string/domo_address_unknown"
            android:textSize="@dimen/domo_text_main_size"
            android:padding="@dimen/domo_basic_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/domo_button_valid" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
